<resources>
    <!--APPEARANCE-->
    <string name="app_name" translatable="false">Hyperpad</string>
    <string name="action_file">File</string>
    <string name="action_new">New</string>
    <string name="action_open">Open</string>
    <string name="action_recent">Recent</string>
    <string name="action_save">Save</string>
    <string name="action_save_as">Save as</string>
    <string name="action_print">Print</string>
    <string name="action_about">About Hyperpad</string>
    <string name="action_close">Close</string>
    <string name="action_edit">Edit</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_view">View</string>
    <string name="action_find">Find</string>
    <string name="action_goto">Go to Line</string>
    <string name="action_line_break">Line break</string>
    <string name="action_encoding">Encoding</string>
    <string name="action_status_bar">Status bar</string>
    <string name="action_warp_text">Word wrap</string>
    <string name="action_font_monospace">Monospaced font</string>
    <string name="action_font_size">Font size</string>
    <string name="action_statistics">Statistics</string>
    <string name="do_not_save">Don\'t save</string>
    <string name="err_load_file">Error loading the file</string>
    <string name="err_write_file">Error writing the file</string>
    <string name="file_save_confirm">Do you want to save the changes to the file?</string>
    <string name="find_find">Find</string>
    <string name="find_replace">Replace</string>
    <string name="find_replace_all">All</string>
    <string name="find_case_sensitive">Case Sensitive</string>
    <string name="find_down">Down</string>
    <string name="find_up">Up</string>
    <string name="find_not_found">Keyword not found</string>
    <string name="find_replaced">Replaced $x matches</string>
    <string name="goto_hint">line number</string>
    <string name="statistics_char">\nCharacter count\n\n</string>
    <string name="statistics_word">\n\nWord count\n\n</string>
    <string name="statistics_line">\n\nLine count\n\n</string>
    <string name="status_lb_lf" translatable="false">LF</string>
    <string name="status_lb_crlf" translatable="false">CRLF</string>
    <string name="status_lb_cr" translatable="false">CR</string>
    <string name="about">
        Hyperpad is an app that simply implements the main function of a notepad. You open the app, you write something, and you save it. That\'s all.\n
        \n
        This app is under GPL v2 license,\n
        (1)Commercial usage\n
        (2)Modification\n
        (3)Distribution\n
        (4)Private usage\n
        is permitted UNDER THESE CONDITIONS:\n
        (1)Provide this license and copyright notice\n
        (2)State changes\n
        (3)Disclose source under\n
        (4)Same license\n
        \n
        This app uses unicode-org/icu to detect the encoding of text files. License files provided with the code.\n
        \n
        For more details about this app, please visit https://github.com/donmor/Hyperpad .
    </string>
    <!--MISC-->
    <string name="char_tab" translatable="false">&#160;&#160;&#160;&#160;</string>
</resources>
