<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/find_replace_widget"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/find_edit_find"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/find_find"
            android:inputType="text"
            android:importantForAutofill="no"
            android:selectAllOnFocus="true" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/find_case_sensitive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/find_case_sensitive"
            app:buttonCompat="@drawable/ani_ic_case_sensitive"/>
        <ImageButton
            android:id="@+id/find_down"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/find_down"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_arrow_downward" />

        <ImageButton
            android:id="@+id/find_up"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/find_up"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_arrow_upward" />

        <ImageButton
            android:id="@+id/find_replace_sw"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/find_replace"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_find_replace" />

        <ImageButton
            android:id="@+id/find_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/action_close"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_close" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/find_replace_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <EditText
            android:id="@+id/find_edit_replace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/find_replace"
            android:importantForAutofill="no"
            android:inputType="text"
            android:selectAllOnFocus="true" />

        <ImageButton
            android:id="@+id/find_replace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/find_replace"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_find_replace" />

        <ImageButton
            android:id="@+id/find_replace_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/find_replace_all"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_find_replace_all" />

    </LinearLayout>
</LinearLayout>